--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -15,25 +15,48 @@
             android:id="@+id/image_iv"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:layout_margin="4dp"
             android:adjustViewBounds="true"
             android:contentDescription="@string/sandwich_picture_content_description"
-            android:scaleType="centerCrop"
-            android:layout_margin="4dp"/>
+            android:scaleType="centerCrop" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:text="@string/detail_also_known_as_label"
+            android:textColor="@android:color/holo_blue_light"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/also_known_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="4dp" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:text="@string/detail_also_known_as_label"
+            android:text="@string/detail_place_of_origin_label"
+            android:textColor="@android:color/holo_blue_light"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/origin_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="4dp" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:text="@string/detail_place_of_origin_label"
+            android:text="@string/detail_ingredients_label"
+            android:textColor="@android:color/holo_blue_light"
             android:textStyle="bold" />
 
         <TextView
@@ -41,16 +64,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:text="@string/detail_ingredients_label"
             android:textStyle="bold" />
 
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:text="@string/detail_description_label"
+            android:textColor="@android:color/holo_blue_light"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/description_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:text="@string/detail_description_label"
             android:textStyle="bold" />
     </LinearLayout>
 </ScrollView>
